<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/details"
                android:textSize="40sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/uploadedimage"
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:layout_gravity="center_horizontal"
                android:onClick="onClicku"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/productpic" />

            <Button
                android:id="@+id/upload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/upload_image" />

            <EditText
                android:id="@+id/productna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="8dp"
                android:hint="Product name"
                android:inputType="text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/productdes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="Product description"
                android:inputType="text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/length"
                android:inputType="text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/width"
                android:inputType="text"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/price"
                android:inputType="text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/colour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/colour"
                android:inputType="text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/ohk_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/back_icon"
                android:onClick="back_to_merchant"
                android:text="@string/confirm_product" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>